--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,124 +5,115 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity"
-    android:background="@drawable/deck"
+    android:background="@drawable/fongameee"
     >
 
-    <ImageView
-        android:id="@+id/imageView00"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        app:srcCompat="@drawable/rx"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="310dp"
+        android:layout_height="310dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/imageView01"
-        android:layout_marginTop="@dimen/dim_ma"
-         />
-
-    <ImageView
-        android:id="@+id/imageView01"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        app:srcCompat="@drawable/rx"
-        app:layout_constraintLeft_toRightOf="@+id/imageView00"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/imageView02"
-        android:layout_marginTop="@dimen/dim_ma"
-
-        />
-
-    <ImageView
-        android:id="@+id/imageView02"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        app:srcCompat="@drawable/rx"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/imageView01"
-        android:layout_marginTop="@dimen/dim_ma"
+        android:layout_marginTop="70dp"
+        android:background="@drawable/grid"
+        android:id="@+id/grid"
+        >
+        <ImageView
+            android:id="@+id/n00"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/btn0"/>
 
-        />
+        <ImageView
+            android:id="@+id/n01"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/n00"
+            android:layout_marginLeft="5dp"
+            app:srcCompat="@drawable/btn0"/>
 
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        android:layout_marginTop="@dimen/dim_mb"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView00"
-        app:layout_constraintRight_toLeftOf="@+id/imageView11"
-        app:srcCompat="@drawable/rx"
-        />
+        <ImageView
+            android:id="@+id/n02"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/btn0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/n01"
+            android:layout_marginLeft="5dp"
+            />
 
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        app:srcCompat="@drawable/rx"
-        app:layout_constraintLeft_toRightOf="@+id/imageView10"
-        app:layout_constraintTop_toBottomOf="@+id/imageView01"
-        app:layout_constraintRight_toLeftOf="@+id/imageView12"
-        android:layout_marginTop="@dimen/dim_mb"
 
-        />
 
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        app:srcCompat="@drawable/rx"
-        app:layout_constraintLeft_toRightOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/imageView02"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="@dimen/dim_mb"
-        />
+        <ImageView
+            android:id="@+id/n10"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/n00"
+            android:layout_marginTop="5dp"
+            app:srcCompat="@drawable/btn0"
+            />
 
-    <ImageView
-        android:id="@+id/imageView20"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        android:layout_marginTop="@dimen/dim_mb"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/imageView21"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10"
-        app:srcCompat="@drawable/rx"
+        <ImageView
+            android:id="@+id/n11"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintTop_toBottomOf="@+id/n00"
+            android:layout_marginTop="5dp"
+            app:layout_constraintLeft_toRightOf="@+id/n10"
+            android:layout_marginLeft="5dp"
+            app:srcCompat="@drawable/btn0"
+            />
 
-        />
+        <ImageView
+            android:id="@+id/n12"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/btn0"
+            app:layout_constraintTop_toBottomOf="@+id/n00"
+            android:layout_marginTop="5dp"
+            app:layout_constraintLeft_toRightOf="@+id/n11"
+            android:layout_marginLeft="5dp"
+            />
 
-    <ImageView
-        android:id="@+id/imageView21"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        app:srcCompat="@drawable/rx"
-        app:layout_constraintLeft_toRightOf="@+id/imageView20"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11"
-        app:layout_constraintRight_toLeftOf="@+id/imageView22"
-        android:layout_marginTop="@dimen/dim_mb"
 
-        />
 
-    <ImageView
-        android:id="@+id/imageView22"
-        android:layout_width="@dimen/dim_b"
-        android:layout_height="@dimen/dim_b"
-        android:layout_marginTop="@dimen/dim_mb"
-        app:layout_constraintLeft_toRightOf="@+id/imageView21"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12"
-        app:srcCompat="@drawable/rx"
+        <ImageView
+            android:id="@+id/n20"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/n10"
+            android:layout_marginTop="5dp"
+            app:srcCompat="@drawable/btn0"
+            />
 
-        />
+        <ImageView
+            android:id="@+id/n21"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintTop_toBottomOf="@+id/n10"
+            android:layout_marginTop="5dp"
+            app:layout_constraintLeft_toRightOf="@+id/n20"
+            android:layout_marginLeft="5dp"
+            app:srcCompat="@drawable/btn0"
+            />
 
-    <ImageView
-        android:id="@+id/imageBlackAgain"
-        android:layout_width="170dp"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/againbtn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="30dp"
-        />
+        <ImageView
+            android:id="@+id/n22"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/btn0"
+            app:layout_constraintTop_toBottomOf="@+id/n10"
+            android:layout_marginTop="5dp"
+            app:layout_constraintLeft_toRightOf="@+id/n21"
+            android:layout_marginLeft="5dp"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/imageBlackExit"
@@ -136,14 +127,25 @@
          />
 
     <ImageView
-        android:id="@+id/imageyourTurn"
-        android:layout_width="wrap_content"
+        android:id="@+id/imageYourTurn"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/turnbtn"
-        app:layout_constraintTop_toBottomOf="@+id/imageView21"
+        app:layout_constraintTop_toBottomOf="@+id/grid"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
+        />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/againbtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="30dp"
          />
 
 
